--- a/app/views/post_images/index.html.erb
+++ b/app/views/post_images/index.html.erb
@@ -1,1 +1,2 @@
-<%= render 'list', post_images: @post_images %>
+#<%= render 'list', post_images: @post_images %>
+<%= image_tag post_image.get_image(500, 300), class: "card-img-top" %>
